--- a/src/modules/table-module.scss
+++ b/src/modules/table-module.scss
@@ -4,6 +4,6 @@
  * SPDX-License-Identifier: GPL-3.0-only
  */
 
-@use './border-collapse';
+@use './table';
 
-@include border-collapse.border-collapse();
+@include table.table();
