Add favicon and move documentation files

--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -9,11 +9,11 @@ SPDX-License-Identifier: GPL-3.0-only
 {% import "docs/macros/example.njk" as example %}
 
 {% block content %}
-    <a href="/example.html" class="db link ph3 pv2">
+    <a href="/docs/example.html" class="db link ph3 pv2">
 	Examples
     </a>
 
-    <a href="/list.html" class="db link ph3 pv2">
+    <a href="/docs/list.html" class="db link ph3 pv2">
 	List of rules
     </a>
 {% endblock %}
