Set header height after switching breakpoints

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -15,7 +15,7 @@ SPDX-License-Identifier: GPL-3.0-only
     </head>
     <body class="sans-serif">
 	<div class="df flex-column min-vh-100">
-	    <div class="sticky w-100 top-0 bg-white bb b--moon-gray" style="z-index: 1;">
+	    <div class="js-header sticky w-100 top-0 bg-white bb b--moon-gray" style="z-index: 1;">
 		<div class="container center p3 pb2">
 		    <div class="df items-center">
 			<a href="/" class="link inherit">
