--- a/docs/pages/docs/list.njk
+++ b/docs/pages/docs/list.njk
@@ -10,7 +10,7 @@ SPDX-License-Identifier: GPL-3.0-only
 
 {% block content %}
     <div class="mw8 center">
-	<div class="row f5 b sticky bg-white bb bw1 b--black-20" style="top: 75px;">
+	<div class="row f5 b sticky bg-white bb bw1 b--black-20" style="top: var(--header-height);">
 	    <div class="col-12 col-3-m col-2-l p2">
 		Selectors
 	    </div>
