Add prefixed file, sort files on index page

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -11,7 +11,7 @@ SPDX-License-Identifier: GPL-3.0-only
 	<title>My CSS library demo</title>
 	<meta name="description" content="{{ description }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="/c4s-all.css" rel="stylesheet">
+	<link href="/c4s.css" rel="stylesheet">
     </head>
     <body class="sans-serif">
 	<div class="df flex-column min-vh-100">
